fixing mailchimp signup form ui on mobile by adding modal background and some other css update

--- a/components/general/MailChimp.module.css
+++ b/components/general/MailChimp.module.css
@@ -1,3 +1,7 @@
+.ModalbackgroundHidden {
+  display: none; /* Hidden by default */
+}
+
 .NewsLetterContainerOpen {
   background-color: white;
   color: black;
@@ -7,7 +11,6 @@
   height: 100%;
   position: fixed;
   right: 0;
-  top: 40vh;
   z-index: 50;
   display: flex;
   transition: 0.5s cubic-bezier(0.17, 0.11, 0.71, 0.89);
@@ -20,7 +23,6 @@
   height: 100%;
   position: fixed;
   right: 0;
-  top: 40vh;
   z-index: 50;
   display: flex;
   transition: 0.5s cubic-bezier(0.17, 0.11, 0.71, 0.89);
@@ -34,6 +36,7 @@
   position: absolute;
   display: inline-block;
   background: #ec6b1d 0% 0% no-repeat padding-box;
+  padding: 3px;
   cursor: pointer;
 }
 
@@ -108,20 +111,41 @@
   margin: 10px 0;
 }
 
+@media screen and (min-width: 640px) {
+  .NewsLetterContainerOpen,
+  .NewsLetterContainerClose {
+    top: 40vh;
+  }
+}
 @media screen and (max-width: 640px) {
+  .ModalbackgroundShown {
+    display: block;
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  }
   .NewsLetterContainerOpen,
   .NewsLetterContainerClose {
     flex-direction: column;
-    max-height: 536px;
-    max-width: 100vw;
+    max-height: 546px;
+    width: 100%;
     margin: 0 auto;
     position: fixed;
     left: 0;
-    top: 70px;
+    bottom: 0;
     touch-action: pan-down;
   }
   .NewsLetterContainerClose {
-    transform: translateY(calc(100vh - 95px));
+    /* transform: translateY(calc(100vh - 116px)); */
+    transform: translateY(546px);
+    bottom: 37px;
   }
   .OfferContainer {
     transform: none;
