--- a/styles/bestseller.module.css
+++ b/styles/bestseller.module.css
@@ -86,13 +86,13 @@
   border: none;
 }
 
-.addToBasketWithDropDown{
+.addToBasketWithDropDown {
   display: block;
   margin-top: 0;
   position: absolute;
   bottom: 5px;
   width: 90%;
-  margin-right: 2rem,
+  margin-right: 2rem;
 }
 
 .Hide {
@@ -127,24 +127,26 @@
 @media (max-width: 1205px) {
   .Container {
     flex-direction: column;
-    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    /* padding: 10px; */
   }
   .Container img {
     width: 100%;
-    height: 380px;
-    object-fit: cover;
+    /* height: 380px; */
+    object-fit: contain;
   }
 }
 @media (max-width: 640px) {
   .productContainer {
     width: 100%;
     margin: 20px;
-    padding: 0 20px 0 0;
+    padding: 0 0 0 0;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    column-gap: 30px;
-    row-gap: 25px;
+    column-gap: 10px;
+    row-gap: 10px;
     justify-content: center;
   }
   .itemPicture,
@@ -176,5 +178,3 @@
     opacity: 0;
   }
 }
-
-
