--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2719,7 +2719,7 @@ ul.stores img {
 }
 @media only screen and (max-width: 1400px) {
   .navbar-content {
-    padding: 0 14px 0 12px;
+    padding: 0 14px 0 18px;
   }
 }
 /* trending 1800px */
